# vampire

./: .gitignore  CMakeLists.txt  README.md
assets/models/: capsule.fbx  cube.fbx  octahedron-sharpe.fbx  octahedron.fbx  plane.fbx  sphere-flat.fbx  sphere-smooth.fbx
assets/shaders/: scene.frag  scene.vert
assets/sprites/: sample.aseprite
assets/textures/: sample.aseprite
include/: assets.h  game.h  gl_renderer.hpp  interface.h  render_types.h  shader.h  utils.h
include/ecs/: ecs.h
include/engine/: context.h  graphic.h  platform.h  renderer.h  utils.h
include/mathf/: mathf.h  matries.h  quat.h  vectors.h
include/platform/: win32.h
include/systems/: particle.h
include/utils/: color.h  constants.h  dtype.h  keycode.h  logger.h  macros.h  mathf.h  matrix.h  phys2d.h  quat.h  vector.h
shaders/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
src/: main.cpp
src/core/: game.cpp  gl_renderer.cpp  global_vars.cpp  shader.cpp  utils.cpp
src/platform/: win32.cpp
